--- a/src/components/AddFarm.css
+++ b/src/components/AddFarm.css
@@ -9,12 +9,18 @@
 
 .modal-main {
   position: fixed;
-  background: white;
-  width: 80%;
+  background: rgb(0, 166, 255);
+  width: 60%;
   height: auto;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.form {
+  width: 80%;
+  margin: auto;
+  padding: 20px;
 }
 
 .display-block {
